--- a/ABC/style.css
+++ b/ABC/style.css
@@ -82,3 +82,122 @@
 .para{
     margin-bottom: 10px;
 }
+.span_letters{
+    color: #373737;
+    font-size: 2.5rem;
+    font-weight: 400;
+    margin-bottom: 40px;
+    text-align: center;
+}
+.line{
+    height: 3px;
+    width: 60px;
+    background-color: #0fbe35;
+   margin-bottom: 30px;
+}
+.main_div{
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 80px 5rem;
+}
+.main_div p{
+    color: rgb(128, 123, 123);
+    padding: 10px 130px;
+}
+.main_div img{
+    width: 600px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+
+}
+.btn-2{
+    padding: 10px 20px;
+    background-color: #2681f4; 
+    color: white;
+    border-radius: 5px;
+    border: none;
+    outline: none;
+}
+.main_last{
+    align-items: center;
+    background: #ececec73;
+    display: flex;
+    justify-content: center;
+    padding: 0 8rem;
+}
+.main_last h3{
+    color: #373737;
+    font-weight: 400;
+    font-size: 1.5rem;
+    margin-bottom: 10px;
+}
+.main_last .color{
+    font-size: 1.3rem;
+    font-weight: 400;
+    letter-spacing: 0.8px;
+    margin-bottom: 10px;
+}
+.main_last p{
+    color: rgb(128, 123, 123);
+   
+  
+}
+.main_last img{
+    background: #ececec73;}
+.btn-3{
+    padding: 10px 20px;
+    background-color: #2681f4; 
+    color: white;
+    border-radius: 5px;
+    border: none;
+    outline: none;
+    margin-top: 10px;
+}
+.maps{
+    z-index: 100;
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+.logo img{
+    width: 350px;
+}
+.footer{
+    align-items: center;
+    background: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    
+    
+}
+.links {
+    color: rgb(141, 131, 131);
+    font-size: 30px;
+    margin-top: 25px;
+    text-align: center;
+}
+.footer_1{
+    color: rgb(109, 100, 100);
+    display: flex;
+    gap: 2rem;
+    margin-top: 20px;
+}
+.h1{
+    color: rgb(141, 131, 131);
+    font-size: 30px;
+    margin-top: 25px;
+    text-align: center;
+}
+.copyright{
+    border-top: 1px solid gray;
+    width: 100%;
+    color: #505050;
+    
+    margin-top: 25px;
+    padding: 30px 20px;
+    text-align: center;
+}
