--- a/ABC/style.css
+++ b/ABC/style.css
@@ -157,47 +157,163 @@
 }
 .maps{
     z-index: 100;
-    height: 100%;
+    
     width: 100%;
     margin: 0;
     padding: 0;
 }
 .logo img{
     width: 350px;
+    background-color: white;
 }
 .footer{
     align-items: center;
-    background: white;
+    background-color: white;
+
     display: flex;
     flex-direction: column;
     justify-content: center;
     
     
 }
-.links {
+.links {    
     color: rgb(141, 131, 131);
     font-size: 30px;
     margin-top: 25px;
     text-align: center;
+    background-color: white;
 }
 .footer_1{
     color: rgb(109, 100, 100);
     display: flex;
     gap: 2rem;
     margin-top: 20px;
+    background-color: white;
+
 }
 .h1{
     color: rgb(141, 131, 131);
     font-size: 30px;
     margin-top: 25px;
     text-align: center;
+    background-color: white;
+
 }
 .copyright{
     border-top: 1px solid gray;
     width: 100%;
     color: #505050;
-    
+    background-color: white;
     margin-top: 25px;
     padding: 30px 20px;
     text-align: center;
+}
+.footer div,.footer p{
+    background-color: white;
+}
+.footer_1 div:hover{
+    color: red ;
+}
+.symbol{
+    color: white;
+    background-color: #2681f4;
+}
+.social_links{
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+    font-size: 2rem;
+    margin-top: 10px;
+    color: gray;
+
+}
+.social_links div i{
+    border: 1px solid gray;
+    padding: 10px ;
+    border-radius: 100px;
+}
+.registration_form{
+    display: flex;
+    justify-content: space-around;
+}
+.register_img img{
+    width: 30rem;
+    margin-left: 100px;
+}
+.registration_input input{
+    width: 325px;
+    padding: 8px;
+    border-radius: 5px;
+    border: 1px solid gray;
+    outline: none;
+}
+.main_registration{
+    margin-top: 40px;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    margin-right: 150px;
+}
+.input_container{
+    position: relative;
+}
+.registration_label label {
+    position: absolute;
+    top: -10px;
+    left: 5px;
+    z-index: 100;
+    padding: 0px 5px;
+    color: gray;
+    font-size: 15px;
+}
+.registration_input i{
+    position: absolute;
+    top: 9px;
+    right: 10px;
+    color: gray;
+    font-size: 20px;
+}
+.input_container select{
+    width: 345px;
+    padding: 8px;
+    border-radius: 5px;
+    border: 1px solid gray;
+    outline: none;
+}
+.quiz{
+    border: 1px solid gray;
+    padding: 15px;
+    border-radius: 5px;
+}
+.quiz_category{
+    display: flex;
+    gap: 15px;
+}
+.quiz_1{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+.quiz p{
+    margin-bottom: 10px;
+}
+.tech{
+    margin-top: 10px;
+}
+.web{
+    margin-left: 60px;
+}
+.signup{
+    padding: 10px 25px;
+    color: white;
+    background-color: #2681f4;
+    border: none;
+}
+.links_1{
+    margin-bottom: 40px;
+}
+.btn a{
+    text-decoration: none;
+    background-color: green;
+    color: white;
 }
