--- a/ABC/style1.css
+++ b/ABC/style1.css
@@ -2,7 +2,6 @@
 *{
     margin: 0;
     padding: 0;
-    background-color: rgb(241, 241, 241);
     font-family: "Sora";
 }
 .navbar{
@@ -342,6 +341,7 @@
     display: flex;
     gap: 15px;
     margin-bottom: 10px;
+    margin-right: 40px;
 }
 .img_1 img{
     width: 35rem;
@@ -378,11 +378,8 @@
     margin-top: 15px;
     text-align: left;
 }
-.orientation{
-    color: #333;
-    font-size: 2rem;
-    font-weight: 300;
-}
+
+
 .para_3{
     color: #333;
     font-size: 15px;
@@ -396,13 +393,9 @@
     color: black !important;
     font-weight: 500 !important;
 }
-.android{
-    font-size: 40px;
-}
 
-.schedule_1{
-    margin-top: 15px;
-    font-size: 20px !important;
-    color: black ;
-}
+h2{
+    color: #333;
+    font-size: 35px;
+    font-weight: 400;
 }
