--- a/ABC/style.css
+++ b/ABC/style.css
@@ -405,4 +405,36 @@
     font-size: 20px !important;
     color: black ;
 }
+.contact{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    justify-content: center;
+    align-items: center;
+}
+.span{
+    display: flex;
+    font-size: 40px;
+    font-weight: 600;
+}
+h4{
+    font-size: 20px;
+    color: #333;
+   
+    font-weight: 400;
+}
+.last_contact{
+    display: flex;
+    margin-left: 150px;
+}
+.name{
+    color: rgb(175, 175, 182);
+    font-size: 14px;
+
+}
+
+.placeholder{
+    height: 50px;
+    width: 100%;
+    margin: 12px 0px;
 }
