--- a/ABC/style2.css
+++ b/ABC/style2.css
@@ -2,7 +2,7 @@
 *{
     margin: 0;
     padding: 0;
-    background-color: rgb(241, 241, 241);
+
     font-family: "Sora";
 }
 .navbar{
@@ -409,13 +409,11 @@
     display: flex;
     /* justify-content: space-around; */
     gap: 50px;
-    padding: 70px;
+    padding: 20px 50px;
     /* border: 1px solid ; */
     background-color: white;
     border-radius: 5px;
-    -webkit-box-shadow: 9px 10px 25px 0px rgba(0,0,0,0.75);
--moz-box-shadow: 9px 10px 25px 0px rgba(0,0,0,0.75);
-box-shadow: 9px 10px 25px 0px rgba(0,0,0,0.75);
+    box-shadow: 0 5px 10px rgb(0 0 0 / 20%);
     margin: 4rem 7rem;
 }
 .contact_social{
@@ -425,6 +423,7 @@ box-shadow: 9px 10px 25px 0px rgba(0,0,0,0.75);
     text-align: center;
     align-items: center;
     margin-left: 50px;
+    margin-top: 30px;
 }
 .contact_social i{
     font-size: 30px;
@@ -436,6 +435,43 @@ box-shadow: 9px 10px 25px 0px rgba(0,0,0,0.75);
 .contact_info{
     font-size: 14px;
     color: #b4a9a9
+}
+.contact_main{
+    font-size: 30px;
+    font-weight: 600;
+
+}
+.contact_input input{
+    width: 600px;
+    padding: 10px;
+    background-color: #f0f1f8;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+}
+textarea{
+    width: 600px;
+    padding: 10px;
+    background-color: #f0f1f8;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    resize: none;
+    height: 100px;
+}
+.contact_inputmain{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+
+}
+.contact_btn{
+    padding: 10px 20px;
+    margin-top: 10px;
+    background-color: #2681f4;
+    border: none;
+    border-radius: 5px;
+    color: white;
 }
 a{
     text-decoration: none;
